# Luminare

./: .gitignore  README.md  mvp_editor.py  pyproject.toml
app/: main.py
app/core/: audio_analyzer.py  media_controller.py  project.py  sequence_player.py  store.py  utils_timeline.py
app/core/export/: engine_interface.py  export_profile.py  export_service.py  ffmpeg_engine.py
app/core/save_system/: save_api.py  serializers.py  test_reader.py
app/core/save_system/project/: project.py  serializers.py
app/engine/: exporter.py
app/types/: ImportTypes.py
app/ui/: inspector.py  main_window.py  player_controls.py  styles.py  timeline.py  video_view.py
app/ui/components/: assets_panel.py  back_button.py  change_export_folder_button.py  change_save_folder_button.py  create_project_button.py  icons.py  import_button.py  import_toolbar.py  leave_button.py  media_list.py  media_list_widget.py  menu_button.py  project_button.py  title.py  volume_slider.py
app/ui/editor/: assets_panel.py  editor.py  importPanel.py  inspector.py  main_window.py  overlay_layer.py  player_controls.py  timeline.py  timeline_graphics.py  video_canvas.py  video_view.py
app/ui/menu/: home.py
app/ui/menu/home/: home_menu.py
app/ui/menu/home/project_select/: project_select.py
app/ui/menu/home/settings/: settings.py
app/ui/settings/: settings.py
