[project]
name = "luminare"
version = "0.1.0"
description = "A light video editing software"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg (>=1.4,<2.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pydub (>=0.25.1,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
